HIL/src/objects/Document__c.object
<CustomObject>
    <fields>
        <fullName>Client_Prospect__c</fullName>
        <label>Client/Prospect</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Will</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power of Atty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Living Will</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>401k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Umbrella Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Returns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Security Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Financial Statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney Authorization Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA Authorization Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Relationship_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Relationship Group</label>
        <referenceTo>Relationship_Group__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewed_Date__c</fullName>
        <label>Reviewed Date</label>
        <type>Date</type>
    </fields>
    <label>Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>